<resources>
    <string name="app_name">warehouse_accounting</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="search">Поиск</string>
    <string name="update">Обновить</string>

    <string name="tv_no_suppliers">У вас нет поставщиков</string>

    <string name="tv_no_buyers">У вас нет покупателей</string>

    <string name="tv_no_products">У вас нет продуктов</string>

    <string name="menu_profile">Профиль</string>
    <string name="menu_main_menu">Главное меню</string>
    <string name="menu_products">Товары</string>
    <string name="menu_documents">Документы</string>
    <string name="menu_costs">Затраты</string>
    <string name="menu_reports">Отчеты</string>
    <string name="menu_suppliers">Поставщики</string>
    <string name="menu_buyers">Покупатели</string>
    <string name="menu_warehouses">Склады</string>
    <string name="menu_mistral">Мистрал</string>
    <string name="menu_help">Справка</string>
    <string name="menu_what_new">Что нового?</string>
    <string name="menu_need_help">Нужна помощь?</string>

    <string name="products_fab_menu_products_delete">Удалить</string>
    <string name="products_fab_menu_check_stock">Наличие на складах</string>
    <string name="products_fab_menu_movement">Движение товара</string>

    <string name="suppliers_fab_name">Наименование</string>
    <string name="suppliers_fab_address">Адрес</string>
    <string name="suppliers_fab_email">Эл. почта</string>
    <string name="suppliers_fab_phone">Телефон</string>
    <string name="suppliers_fab_TIN">ИНН</string>
    <string name="suppliers_fab_bank_details">Банковские реквизиты</string>
    <string name="suppliers_fab_note">Примечание</string>

    <string name="buyers_fab_name">Наименование</string>
    <string name="buyers_fab_address">Адрес</string>
    <string name="buyers_fab_email">Эл. почта</string>
    <string name="buyers_fab_phone">Телефон</string>
    <string name="buyers_fab_TIN">ИНН</string>
    <string name="buyers_fab_bank_details">Банковские реквизиты</string>
    <string name="buyers_fab_note">Примечание</string>

    <string name="products_item_product_image">Изображение товара</string>
    <string name="products_item_product_name">Наименование товара</string>
    <string name="products_item_description">Описание</string>
    <string name="products_item_barcode">Штрих код</string>
    <string name="products_item_quantity">Количество</string>

    <string name="suppliers_item_description">Описание</string>

    <string name="warehouses_fab_name">Наименование склада</string>

    <string name="buyers_item_description">Описание</string>

    <string name="products_dialog_product_image">Изображение товара</string>
    <string name="products_dialog_product_name">Наименование товара</string>
    <string name="products_dialog_description">Описание</string>
    <string name="products_dialog_barcode">Штрих код</string>
    <string name="products_dialog_quantity">Количество</string>
    <string name="buyers_item_note">Note</string>
    <string name="buyers_item_email">Email</string>
    <string name="buyers_item_phone">Phone</string>
    <string name="suppliers_item_phone">Номер телефона</string>
    <string name="suppliers_item_email">Почта</string>
    <string name="suppliers_item_note">Заметки</string>
    <string name="documents_fab_income">Приход</string>
    <string name="documents_fab_expense">Расход</string>
    <string name="documents_fab_movement">Перемещение</string>
    <string name="documents_fab_inventory">Инвентаризация</string>
    <string name="documents_item_quantity_of_goods">Количество товара</string>
    <string name="documents_item_name_of_warehouse">Название склада</string>
    <string name="documents_item_creation_date">Дата создания документа</string>
    <string name="documents_item_document">Название и номер документа</string>
    <string name="noDocuments">Документы отсутствуют</string>
    <string name="tv_no_warehouses">У вас нет складов</string>
    <string name="go_to_login">Go to login</string>
    <string name="go_to_registration">Go to registration</string>
    <string name="app_name_welcome">Складской учет</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="menu_settings">Настройки</string>
    <string name="send_message">Отправить</string>
    <string name="text_message">Введите сообщение</string>
    <string name="btnRegistration">Registration</string>
    <string name="name_profile">Имя</string>
    <string name="second_name_profile">Фамилия</string>
    <string name="login_profile">Логин</string>
    <string name="telephone_profile">Телефон</string>
    <string name="email_profile">E-mail</string>
    <string name="change_photo_profile">Изменить фотографию</string>
    <string name="save_profile">Сохранить</string>
    <string name="push_settings">Push-уведомления</string>
    <string name="dark_theme_settings">Тёмная тема</string>
    <string name="version_settings">Версия: 1.0.0</string>
    <string name="products_dialog_warehouse">Склад</string>
    <string name="products_item_warehouse">Склад</string>
</resources>