<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_products"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/menu_products" />
        <item
            android:id="@+id/nav_suppliers"
            android:icon="@android:drawable/ic_menu_send"
            android:title="@string/menu_suppliers" />
        <item
            android:id="@+id/nav_buyers"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/menu_buyers" />
        <item
            android:id="@+id/nav_warehouses"
            android:icon="@android:drawable/ic_menu_mylocation"
            android:title="@string/menu_warehouses" />
        <item
            android:id="@+id/nav_help"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_need_help"
            android:icon="@android:drawable/ic_menu_call"
            android:title="@string/menu_need_help" />
    </group>
</menu>
