<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/welcomeFragment">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.warehouse_accounting.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_products"
        android:name="com.example.warehouse_accounting.ui.products.ProductsFragment"
        android:label="@string/menu_products"
        tools:layout="@layout/fragment_products" />

    <fragment
        android:id="@+id/nav_documents"
        android:name="com.example.warehouse_accounting.ui.documents.DocumentsFragment"
        android:label="@string/menu_documents"
        tools:layout="@layout/fragment_documents" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.warehouse_accounting.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_suppliers"
        android:name="com.example.warehouse_accounting.ui.suppliers.SuppliersFragment"
        android:label="@string/menu_suppliers"
        tools:layout="@layout/fragment_suppliers" />

    <fragment
        android:id="@+id/nav_buyers"
        android:name="com.example.warehouse_accounting.ui.buyers.BuyersFragment"
        android:label="@string/menu_buyers"
        tools:layout="@layout/fragment_buyers" />

    <fragment
        android:id="@+id/nav_warehouses"
        android:name="com.example.warehouse_accounting.ui.warehouses.WarehousesFragment"
        android:label="@string/menu_warehouses"
        tools:layout="@layout/fragment_warehouses" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.warehouse_accounting.ui.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/nav_need_help"
        android:name="com.example.warehouse_accounting.ui.need_help.NeedHelpFragment"
        android:label="@string/menu_need_help"
        tools:layout="@layout/fragment_need_help" />

    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.example.warehouse_accounting.ui.welcome_window.WelcomeFragment"
        android:label="Welcome">

        <action
            android:id="@+id/action_welcomeFragment_to_loginFragment"
            app:destination="@id/loginFragment" />

        <action
            android:id="@+id/action_welcomeFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.warehouse_accounting.ui.login.LoginFragment"
        android:label="Login" />

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.warehouse_accounting.ui.registration.RegisterFragment"
        android:label="Register" />

</navigation>