<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColor="@color/white"
    android:orientation="vertical"
    android:background="#222222"
    android:padding="16dp">

    <EditText
        android:id="@+id/et_suppliers_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/suppliers_fab_name"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>

    <EditText
        android:id="@+id/et_suppliers_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/suppliers_fab_address"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>

    <EditText
        android:id="@+id/et_suppliers_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/suppliers_fab_email"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>

    <EditText
        android:id="@+id/et_suppliers_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/suppliers_fab_phone"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/et_suppliers_TIN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/suppliers_fab_TIN"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>

    <EditText
        android:id="@+id/et_suppliers_bank_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/suppliers_fab_bank_details"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>

    <EditText
        android:id="@+id/et_suppliers_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/suppliers_fab_note"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>
</LinearLayout>
