<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6dp">

    <TextView
        android:id="@+id/tv_documents_document"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/documents_item_document"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_documents_creation_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/documents_item_creation_date"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_documents_document" />

    <TextView
        android:id="@+id/tv_documents_name_of_warehouse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/documents_item_name_of_warehouse"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_documents_creation_date" />

    <TextView
        android:id="@+id/tv_documents_quantity_of_goods"
        android:layout_width="22dp"
        android:layout_height="56dp"
        android:text="@string/documents_item_quantity_of_goods"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>