<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#141414"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    android:gravity="center_horizontal">

    <View
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <TextView
        android:text="@string/app_name_welcome"
        android:textSize="24sp"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="182dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGoToLogin"
        android:text="@string/go_to_login"
        android:layout_margin="8dp"
        android:layout_width="200dp"
        android:layout_height="50dp"
        app:backgroundTint="#222222"
        android:textColor="#FFFFFF"
        android:layout_gravity="center_horizontal"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGoToRegister"
        android:text="@string/go_to_registration"
        android:layout_margin="8dp"
        android:layout_width="200dp"
        android:layout_height="50dp"
        app:backgroundTint="#222222"
        android:textColor="#FFFFFF"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>
